== 版本说明

=== 1.1.0-beta1

==== Feature

* [功能]支持局部 `SharingJDBC`

==== Improvement

* [优化]增强 `SqlBuilder`
* [优化]支持Java8时间
* [文档]添加性能调优章节

WARNING: Java8时间

==== Fixed

=== 1.0.0-RC

==== Feature

* [功能]支持新版用户权限中心认证适配(* 新版用户权限中心Release后，此功能代码会有一定变更)
* [功能]新增SqlBuilder用于快速构建SQL语句
* [移除]由于 Spring Cloud Thrift RPC 测试不够充分，此版本中暂时移除

==== Improvement

* [功能]支持rabbit confirm(单条)模式

  ((RabbitClusterMQ)Dew.cluster.mq).publish(String topic, String message, boolean confirm)
  ((RabbitClusterMQ)Dew.cluster.mq).request(String address, String message, boolean confirm)

* [功能]支持 `EnabledColumn` 结果反转，EnabledColumn用于标识是否启用状态的注解，默认是true是否用，false是禁用，但有些情况下状态字段会使用`del_flag`表示是否删除，这时需要设置结果反转
* [功能]统一Body及Url Path/Query的异常捕获
* [功能] `tryLock` 支持重入
* [测试]引入 `embedded redis` 以支持单元测试
* [文档]添加 以宠物商店为例的 `新手入门` 章节
* [修改]原 `dew.dao.base-package` 改成 `dew.jdbc.base-packages` 支持多个路径

==== Fixed

* 修正Redis锁 `Unlock` 处理的线程问题
* 修正jacoco单元测试覆盖率偏少的问题

=== 1.0.0-beta5

==== Feature

* 添加服务调用限制（可定义A服务不允许B服务调用，防止服务双向依赖） e.g.

 dew.security.exclude-services:
  - serviceB
  - serviceC

* 添加对Thrift的支持
* 支持集群Leader Election（非严格模式）
* 整合Spring Boot Cache

==== Improvement

* 优化CURD脚手架
* 支持UUID形式的主键
* 优化注解自定义查询（ `@Select` ），通过测试
* 支持自定义异常配置，见 `异常处理` 章节
* 添加Bean分组校验说明，见 `异常处理` 章节
* 添加 `Sonar` 代码质量检查，配置 `sonar.host.url` 执行 `mvn clean verify sonar:sonar`
* 【需要迁移】使用Druid数据库连接池（注意数据库连接配置变更）
* 【需要迁移】删除 `DaoImpl` 兼容性类
* 【需要迁移】将 `Dew.e` 移到 `Dew.E.e`，添加 `Dew.E.checkXX`异常检查方法，见 `异常处理` 章节

==== Fixed

* 修正事务失败，重试成功后还是被回滚的问题

=== 1.0.0-beta4

==== Feature

* 整合 `Spring boot admin` 与 `Turbine`，可直观的监控各个性能及访问指标

image::./images/spring-boot-admin.png[]

* 添加实验功能：使用注解自定义查询（ `@Select` ）

==== Improvement

* 添加了几个自定义验证方式
* 添加性能测试报告
* 移除 `DaoImpl` ，改用接口 `DewDao` 

WARNING: 为确保兼容， `DaoImpl` 在这一版本中未物理移除，如有条件请迁移至 `DewDao` 

==== Fixed

=== 1.0.0-beta3

==== Feature

. Cluster的MQ添加RabbitMQ SPI

==== Improvement

. 支持自定义http错误码( `Dew.e(String code, E ex, StandardCode customHttpCode)` )
. 对加了字段校验(@Valid)的对象，如果检验失败会返回错误详细