@@ -19,7 +19,7 @@ spring:
         hbm2ddl:
           auto: update
   datasource:
-    driver-class-name: com.mysql.ds.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     tomcat:
       max-wait: 24000
 
