@@ -16,7 +16,7 @@ spring:
 
   datasource:
     driver-class-name: org.h2.Driver
-    url: ds:h2:mem:test
+    url: jdbc:h2:mem:test
 
 server:
   port: 8080
