@@ -29,7 +29,6 @@
         <dependency>
             <groupId>com.tairanchina.csp.dew</groupId>
             <artifactId>jdbc-starter</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <!--引入JDBC依赖-->
         <dependency>
