@@ -12,8 +12,6 @@ dew:
     cache: redis
     dist: redis
     mq: rabbit
-  jdbc:
-    base-packages: ["com.tairanchina.csp.dew.core.**.dao"]
   security:
     #auth-adapter: uc
     token-flag: _token_
@@ -53,22 +51,3 @@ spring:
     addresses: ["127.0.0.1"]
   ignite:
     addresses: ["127.0.0.1"]
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: ds:h2:mem:test
-    druid:
-      initial-size: 5
-      min-idle: 5
-      max-active: 20
-      max-wait: 60000
-  multi-datasources:
-    test1:
-      driver-class-name: com.mysql.ds.Driver
-      url: ds:mysql://mysql.fengdai.org:3306/X?useUnicode=true&characterEncoding=utf-8
-      username: root
-      password: tairan2017!
-    test2:
-      driver-class-name: org.postgresql.Driver
-      url: ds:postgresql://10.200.131.24:5432/postgres
-      username: postgres
-      password: tairan.2017
