@@ -8,13 +8,15 @@
 
 ==== Improvement
 
-* [优化]增强 `SqlBuilder`
 * [优化]支持Java8时间
+* [优化]Dew DS性能优化
 * [文档]添加性能调优章节
 
-WARNING: Java8时间
+WARNING: 添加Java8时间支持后继承自 `SafeEntity` 的实体需要注意类型的变化!
 
 ==== Fixed
+
+* [修正]统一错误拦截返回指定为 `MediaType=APPLICATION_JSON_UTF8` 以解决Fegin调用解码错误
 
 === 1.0.0-RC
 
